8206245: [lworld] C2 crashes when merging values with different types

Reviewed-by: roland